# updraft-drf-assignment

./: .flake8  .gitignore  README.md  pyproject.toml  pytest.ini
accounts/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/fixtures/: sample.json
accounts/migrations/: 0001_initial.py
service/: asgi.py  settings.py  urls.py  wsgi.py
