[tool.poetry]
name = "updraft-drf-assignment"
version = "1"
description = ""
authors = ["Fairscore Ltd <contact@updraft.com>"]
license = "proprietary"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"
djangorestframework = "^3.14.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | venv
)/
'''
# because pre-commit explicitly passes the migration files list to black (and
# because we don't want to repeat our exclude pattern both here and in
# .pre-commit-config.yaml), we have to use black's force-exclude option to
# really, really exclude those files.
force-exclude = '''
/(
  migrations
)/
'''

[tool.isort]
profile = "black"
skip_gitignore = true
skip_glob = '*/migrations/*'
line_length = 88
