[tool.poetry]
name = "updraft-drf-assignment"
version = "1"
description = ""
authors = ["Fairscore Ltd"]
license = "proprietary"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
djangorestframework = "^3.15.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-django = "^4.8.0"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
freezegun = "^1.5.0"
django-extensions = "^3.1.5"
Werkzeug = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | venv
)/
'''
# because pre-commit explicitly passes the migration files list to black (and
# because we don't want to repeat our exclude pattern both here and in
# .pre-commit-config.yaml), we have to use black's force-exclude option to
# really, really exclude those files.
force-exclude = '''
/(
  migrations
)/
'''

[tool.isort]
profile = "black"
skip_gitignore = true
skip_glob = '*/migrations/*'
line_length = 88
